--- a/assets/css/supplement.css
+++ b/assets/css/supplement.css
@@ -64,3 +64,39 @@
     font-size: 16px;
     margin-bottom: 5px;
 }
+
+
+.activity-section .activity-others .item {
+    margin-bottom: 20px;
+}
+.activity-section .activity-others .item-inner {
+    padding: 0 15x;
+}
+
+.activity-section .activity-others .author {
+    font-weight: 500;
+    margin-bottom: 5px;
+    font-size: 14px;
+    font-weight: 300;
+}
+
+.activity-section .activity-others .title {
+    font-size: 18px;
+    color: #607D8B;
+    margin-top: 0;
+    margin-bottom: 5px;
+}
+
+.activity-section .activity-others .publication-info {
+    font-weight: 500;
+    margin-bottom: 0px;
+    font-size: 14px;
+    font-weight: 300;
+}
+.activity-section .activity-others .time {
+    color: #8a8a8a;
+    margin-bottom: 15px;
+}
+.activity-section .activity-others .desc {
+    color: #666;
+}
